# messaging-queue-learning

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pending-commit.patch  pyproject.toml  rabbitmq-tutorials.jsx  requirements.txt  visualizer.jsx  vite.config.js  vite.config.js.timestamp-1773697786187-3274ef0e36945.mjs
.github/workflows/: deploy.yml
demo_app/: analytics_service.py  inventory_service.py  notification_service.py  order_service.py  payment_service.py
istio/: README.md
istio/01_architecture/: deployment.yaml  namespace.yaml
istio/02_traffic_routing/: destination-rule.yaml  virtual-service.yaml
istio/03_canary/: canary-virtual-service.yaml  v2-deployment.yaml
istio/04_fault_injection/: fault-virtual-service.yaml
istio/05_circuit_breaking/: circuit-breaker-dr.yaml
istio/06_gateway/: gateway-virtual-service.yaml  gateway.yaml
istio/07_mtls/: peer-authentication.yaml
istio/08_authorization/: authz-policy.yaml
istio/09_observability/: addons-install.sh  telemetry.yaml
istio/10_installation/: install-profiles.sh  istio-operator.yaml
istio/11_service_entry/: service-entry-vs.yaml  service-entry.yaml
istio/12_egress_gateway/: egress-gateway.yaml
istio/13_jwt_auth/: request-authentication.yaml
istio/14_troubleshooting/: troubleshooting-commands.sh
istio/15_traffic_mirroring/: header-manipulation-vs.yaml  mirror-vs.yaml
istio/16_sidecar_resource/: sidecar-resource.yaml
kafka/: README.md  connection.py
rabbitmq/: README.md  connection.py
shared/: models.py
src/: App.jsx
(+36 files in other folders)
