[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "messaging-queue-learning"
version = "0.1.0"
description = "Hands-on learning project for RabbitMQ and Kafka"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
    "confluent-kafka>=2.4.0",
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
